[package]
name = "pychan"
version = "0.1.0"
edition = "2021"
authors = ["Henk Oordt <hd@oordt.dev>"]
description = "A collection of channels for sending around items of type `pyo3::Py<T>`"
repository = "https://github.com/hdoordt/pychan"
license = "MIT"
keywords = ["python", "pyo3", "channel", "async"]
categories = ["asynchronous", "development-tools::ffi"]
exclude = ["*.py", "pyproject.toml"]
readme = "README.md"


[lib]
name = "pychan"
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-queue = "0.3.11"
crossbeam-utils = "0.8.19"
futures = "0.3.30"
pin-project = "1.1.5"

[dependencies.pyo3]
version = "0.22"
features = ["experimental-async", "extension-module"]
