[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "pychan"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]